# ClashOfCalc

./: CMakeLists.txt  README.md
src/: ClashOfCalc.cpp  ClashOfCalc.h  GameState.cpp  GameState.h  Menu.cpp  Menu.h  StateMachine.cpp  StateMachine.h  main.cpp  main.h
src/engine/: Logger.cpp  Logger.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/game/: Game.cpp  Game.h  Menu.cpp  Menu.h
src/game/entity/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/game/world/: Tile.cpp  Tile.h  World.cpp  World.h
